# Actors

./: .gitignore  ACTORS_META_DOCUMENTATION.md  ACTORS_V2_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  DUCKDB_IMPLEMENTATION_SUMMARY.md  ENHANCED_EXAMPLES_SUMMARY.md  FRONTEND_ENHANCEMENT_SUMMARY.md  GEOSPATIAL_SECURITY_SUMMARY.md  ICON_ENHANCEMENT_SUMMARY.md  LICENSE  PROJECT_PROMPT.md  README.md  REPOSITORY_ORGANIZATION_SUMMARY.md  config.yaml  database_demo.py  database_example.py  harper_henry_harmony_mexico.py  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
CLOJURE/: README.md  README_GRID_STATE.md  README_HIGHER_ORDER_FUNCTIONS.md  README_KAWPOW_CONSCIOUSNESS.md  README_PROCEDURES.md  README_REGISTERS_HANDLERS.md  README_SYSTEM_INVENTORY.md  README_WHILE_LOOPS.md  README_WORKING.md  deps.edn  project.clj
GOS/: circuit_breaker.go  data_validation.go  derivatives_gateway.go  derivatives_gateway_demo.go  derivatives_gateway_test.go  enhanced_demo.go  enhanced_derivatives_gateway.go  go.mod  go.sum  metrics.go  monitoring_demo.go  validation_demo.go
RUSTS/: Cargo.toml  financial_agents_demo.rs  ml_pipeline.rs
RUSTS/benches/: financial_engine.rs  ml_pipeline.rs  system_monitor.rs
RUSTS/src/: lib.rs  main.rs
RUSTS/tests/: integration_test.rs  studyhall_integration_test.rs
apis/: actors_embedding_api.py  enhanced_time_api.py  geospatial_api.py  harper_henry_harmony_api.py  lobsters_bonvoya_api.py  production_time_api.py  speech_trading_api.py  time_management_api.py  unified_api_gateway.py
convex/: schema.ts
(+186 files in other folders)
