[package]
name = "actors-rust-components"
version = "0.1.0"
edition = "2021"
authors = ["ACTORS Team <sosloan@github.com>"]
description = "Rust performance components for ACTORS financial intelligence platform"
license = "MIT"
repository = "https://github.com/sosloan/Actors"
keywords = ["financial", "trading", "ai", "agents", "performance"]
categories = ["finance", "development-tools"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

